compiler/tests/invalid_programs/methods/missing_operation_overload.jm
#!TypeError

class Foo
end

if Foo() && Foo()
end
